--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,6 +8,37 @@
 
     <body>
         <h1>Pizza Recipe</h1>
+        <img src="/images/pizza.jpg" alt="Pepperoni Pizza">
+        <p>A pepperoni pizza is a classic dinner idea that is fun for the family!</p>
+        <p>Using this recipe you can have food on the table in under 1 hour. </p>
+
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 teaspoon active dry yeast</li>
+            <li>1/4 teaspoon white sugar</li>
+            <li>3/4 cup lukewarm water</li>
+            <li>2 cups all-purpose flour, divided</li>
+            <li>1/2 teaspoon salt</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Dissolve yeast and sugar in warm water that's 100 degrees F (44 degrees C) in a small bowl.
+                Let stand until yeast softens and begins to form a creamy foam, about 5 to 8 minutes.
+            </li>
+            <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough
+                comes together.
+            </li>
+            <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes.
+                Add remaining 1/4 cup flour if dough is too sticky.
+            </li>
+            <li>Roll dogh into a 12-inch circle. Transfer to a greased pizza pan.</li>
+        </ol>
+
+        <h2>Baking:</h2>
+        <p>Top pizza crust as desired and bake at 500 degrees F (260 degrees C) until golden,
+            8 to 10 minutes.
+        </p>
     </body>
 
 
