--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <h2><a href="recipes/pizza.html">Pizza Recipe</h2>
+        <ul>
+            <li><a href="recipes/pizza.html" target="_blank">Pizza Recipe</li>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</li>
+            <li></li>
+        </ul>    
     </body>
 
 
