--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
+        <img src="/images/chef.jpg" height="750">
+        
+        <h2>
         <ul>
-            <li><a href="recipes/pizza.html" target="_blank">Pizza Recipe</li>
-            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</li>
-            <li></li>
-        </ul>    
+            <li><a href="recipes/pizza.html" target="_blank">Pizza Recipe</a></li>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+            <li><a href="recipes/chicken.html" target="_blank">Chicken</a></li>
+        </ul>
+        </h2>    
     </body>
 
 
