Added return to main page feature

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -65,6 +65,7 @@
             <li>Rest lasagna for 15 minutes before serving.</li>
         </ol>
 
+        <p><a href="/index.html">Return to main page</a></p>
     </body>
 
 </html>
