--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -39,6 +39,10 @@
         <p>Top pizza crust as desired and bake at 500 degrees F (260 degrees C) until golden,
             8 to 10 minutes.
         </p>
+
+
+        
+        <p><a href="/index.html">Return to main page</a></p>
     </body>
 
 
