Changed file address for image and links to recipes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <img src="/images/chef.jpg" height="750">
-        
+        <img src="/home/ejvargas247/repos/odin-recipes/images/chef.jpg" height="750" alt="chef image">
+
         <h2>
         <ul>
-            <li><a href="recipes/pizza.html" target="_blank">Pizza Recipe</a></li>
-            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
-            <li><a href="recipes/chicken.html" target="_blank">Chicken</a></li>
+            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/pizza.html" target="_blank">Pizza Recipe</a></li>
+            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/lasagna.html" target="_blank">Lasagna</a></li>
+            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/chicken.html" target="_blank">Chicken</a></li>
         </ul>
         </h2>    
     </body>
