Changed to absolute paths for links and images in the recipes

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Chipotle Chicken Recipe</h1>
-        <img src="/images/chicken.jpg" alt="Chipotle Chicken in a pan" height="500">
+        <img src="/home/ejvargas247/repos/odin-recipes/images/chicken.jpg" alt="Chipotle Chicken in a pan" height="500">
         <p>A delish chicken recipe that takes less than 15 minutes to make!</p>
         <p>Follow along to this quick dinner that is great for taco tuesday!</p>
     
@@ -51,7 +51,7 @@
 
         </ol>
     
-        <p><a href="/index.html">Return to main page</a></p>
+        <p><a href="/home/ejvargas247/repos/odin-recipes/index.html">Return to main page</a></p>
 
     </body>
 
