--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Lasagna Recipe</h1>
-        <img src="/images/lasagna.jpg" alt="Lasagna" height="310" width="310">
+        <img src="/home/ejvargas247/repos/odin-recipes/images/lasagna.jpg" alt="Lasagna" height="310" width="310">
         <p>Follow along to create a hearty delish lasagna dish!</p>
         <p>With 30 minutes of prep time this dish is perfect for mid-week meals that leaves plenty of leftovers.</p>
 
@@ -65,7 +65,7 @@
             <li>Rest lasagna for 15 minutes before serving.</li>
         </ol>
 
-        <p><a href="/index.html">Return to main page</a></p>
+        <p><a href="/home/ejvargas247/repos/odin-recipes/index.html">Return to main page</a></p>
     </body>
 
 </html>
