--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Pizza Recipe</h1>
-        <img src="/images/pizza.jpg" alt="Pepperoni Pizza">
+        <img src="/home/ejvargas247/repos/odin-recipes/images/pizza.jpg" alt="Pepperoni Pizza">
         <p>A pepperoni pizza is a classic dinner idea that is fun for the family!</p>
         <p>Using this recipe you can have food on the table in under 1 hour. </p>
 
@@ -42,7 +42,7 @@
 
 
         
-        <p><a href="/index.html">Return to main page</a></p>
+        <p><a href="/home/ejvargas247/repos/odin-recipes/index.html">Return to main page</a></p>
     </body>
 
 
