Added CSS to the index page and the pizza page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -10,11 +11,13 @@
         <img src="/home/ejvargas247/repos/odin-recipes/images/chef.jpg" height="750" alt="chef image">
 
         <h2>
-        <ul>
+        <div class="recipes">
+        <ul class="myrecipes">
             <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/pizza.html" target="_blank">Pizza Recipe</a></li>
-            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/lasagna.html" target="_blank">Lasagna</a></li>
-            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/chicken.html" target="_blank">Chicken</a></li>
+            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
+            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/chicken.html" target="_blank">Chicken Recipe</a></li>
         </ul>
+        </div>
         </h2>    
     </body>
 
