--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pizza</title>
+        <link href="/home/ejvargas247/repos/odin-recipes/pizza_style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -13,7 +14,7 @@
         <p>Using this recipe you can have food on the table in under 1 hour. </p>
 
         <h2>Ingredients:</h2>
-        <ul>
+        <ul class="color">
             <li>1 teaspoon active dry yeast</li>
             <li>1/4 teaspoon white sugar</li>
             <li>3/4 cup lukewarm water</li>
