removed the blank feature from initial links, implemented page colors

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
-        <link href="style.css" rel="stylesheet">
+        <link href="/home/ejvargas247/repos/odin-recipes/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body id="main-cover">
         <h1>Odin Recipes</h1>
         <img src="/home/ejvargas247/repos/odin-recipes/images/chef.jpg" height="750" alt="chef image">
 
         <h2>
         <div class="recipes">
-        <ul class="myrecipes">
-            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/pizza.html" target="_blank">Pizza Recipe</a></li>
-            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
-            <li><a href="/home/ejvargas247/repos/odin-recipes/recipes/chicken.html" target="_blank">Chicken Recipe</a></li>
+        <ul>
+            <li id="pizza-link"><a href="/home/ejvargas247/repos/odin-recipes/recipes/pizza.html">Pizza Recipe</a></li>
+            <li id="lasagna-link"><a href="/home/ejvargas247/repos/odin-recipes/recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li id="chicken-link"><a href="/home/ejvargas247/repos/odin-recipes/recipes/chicken.html">Chicken Recipe</a></li>
         </ul>
         </div>
         </h2>    
