--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,9 +4,10 @@
 <head>
         <meta charset="utf-8">
         <title>Chicken</title>
+        <link href="/home/ejvargas247/repos/odin-recipes/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body id="chicken-cover">
         <h1>Chipotle Chicken Recipe</h1>
         <img src="/home/ejvargas247/repos/odin-recipes/images/chicken.jpg" alt="Chipotle Chicken in a pan" height="500">
         <p>A delish chicken recipe that takes less than 15 minutes to make!</p>
@@ -14,17 +15,19 @@
     
         <h2>Ingredients:</h2>
         <ul>
-            <li>1 ounce dried chipotle chile pepper</li>
-            <li>1 ounce dried ancho chile pepper</li>
-            <li>1/2 cup water</li>
-            <li>1/2 red onion, cut into small chunks</li>
-            <li>4 cloves garlic</li>
-            <li>2 teaspoons sea salt</li>
-            <li>1 teaspoon ground cumin</li>
-            <li>1 teaspoon dried oregano</li>
-            <li>1 teaspoon freshly ground black pepper</li>
-            <li>2 tablesspoons olive oil</li>
-            <li>2 1/2 pounds skinless, boneless chicken thighs</li>
+            <div class="Ingredients">
+                <li>1 ounce dried chipotle chile pepper</li>
+                <li>1 ounce dried ancho chile pepper</li>
+                <li>1/2 cup water</li>
+                <li>1/2 red onion, cut into small chunks</li>
+                <li>4 cloves garlic</li>
+                <li>2 teaspoons sea salt</li>
+                <li>1 teaspoon ground cumin</li>
+                <li>1 teaspoon dried oregano</li>
+                <li>1 teaspoon freshly ground black pepper</li>
+                <li>2 tablesspoons olive oil</li>
+                <li>2 1/2 pounds skinless, boneless chicken thighs</li>
+            </div>
         </ul>
         
         <h2>Steps:</h2>
