--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,22 +4,24 @@
     <head>
         <meta charset="utf-8">
         <title>Pizza</title>
-        <link href="/home/ejvargas247/repos/odin-recipes/pizza_style.css" rel="stylesheet">
+        <link href= "/home/ejvargas247/repos/odin-recipes/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body id="pizza-cover">
         <h1>Pizza Recipe</h1>
         <img src="/home/ejvargas247/repos/odin-recipes/images/pizza.jpg" alt="Pepperoni Pizza">
         <p>A pepperoni pizza is a classic dinner idea that is fun for the family!</p>
         <p>Using this recipe you can have food on the table in under 1 hour. </p>
 
         <h2>Ingredients:</h2>
-        <ul class="color">
-            <li>1 teaspoon active dry yeast</li>
-            <li>1/4 teaspoon white sugar</li>
-            <li>3/4 cup lukewarm water</li>
-            <li>2 cups all-purpose flour, divided</li>
-            <li>1/2 teaspoon salt</li>
+        <ul>
+            <div class="Ingredients">
+                <li>1 teaspoon active dry yeast</li>
+                <li>1/4 teaspoon white sugar</li>
+                <li>3/4 cup lukewarm water</li>
+                <li>2 cups all-purpose flour, divided</li>
+                <li>1/2 teaspoon salt</li>
+            </div>
         </ul>
 
         <h2>Steps:</h2>
