--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna Recipe</title>
+        <link href="/home/ejvargas247/repos/odin-recipes/style.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body id="lasagna-cover">
         <h1>Lasagna Recipe</h1>
         <img src="/home/ejvargas247/repos/odin-recipes/images/lasagna.jpg" alt="Lasagna" height="310" width="310">
         <p>Follow along to create a hearty delish lasagna dish!</p>
@@ -14,26 +15,28 @@
 
         <h2>Ingredients:</h2>
         <ul>
-            <li>1 pound sweet Italian sausage</li>
-            <li>3/4 pound lean ground beef</li>
-            <li>1/2 cup minced onion</li>
-            <li>2 cloves garlic, crushed</li>
-            <li>1 (28 ounce) can crushed tomatoes</li>
-            <li>2 (6.5 ounce) cans canned tomato sauce</li>
-            <li>2 (6 ounce) cans tomato paste</li>
-            <li>1/2 cup water</li>
-            <li>2 tablespoons white sugar</li>
-            <li>4 tablespoons choped fresh parsley, divided</li>
-            <li>1 1/2 teaspoons dried basil leaves</li>
-            <li>1 1/2teaspoons salt, divided, or to taste</li>
-            <li>1 teaspoon Italian seasoning</li>
-            <li>1/2 teaspoon fennel seeds</li>
-            <li>1/4 teaspoon ground black pepper</li>
-            <li>12 lasagna noodles</li>
-            <li>16 ounces ricotta cheese</li>
-            <li>1 egg</li>
-            <li>3/4 pound mozzarella cheese, sliced</li>
-            <li>3/4 cup grated Parmesan cheese</li>
+            <div class="Ingredients">
+                <li>1 pound sweet Italian sausage</li>
+                <li>3/4 pound lean ground beef</li>
+                <li>1/2 cup minced onion</li>
+                <li>2 cloves garlic, crushed</li>
+                <li>1 (28 ounce) can crushed tomatoes</li>
+                <li>2 (6.5 ounce) cans canned tomato sauce</li>
+                <li>2 (6 ounce) cans tomato paste</li>
+                <li>1/2 cup water</li>
+                <li>2 tablespoons white sugar</li>
+                <li>4 tablespoons choped fresh parsley, divided</li>
+                <li>1 1/2 teaspoons dried basil leaves</li>
+                <li>1 1/2teaspoons salt, divided, or to taste</li>
+                <li>1 teaspoon Italian seasoning</li>
+                <li>1/2 teaspoon fennel seeds</li>
+                <li>1/4 teaspoon ground black pepper</li>
+                <li>12 lasagna noodles</li>
+                <li>16 ounces ricotta cheese</li>
+                <li>1 egg</li>
+                <li>3/4 pound mozzarella cheese, sliced</li>
+                <li>3/4 cup grated Parmesan cheese</li>
+            </div>
         </ul>
 
         <h2>Steps:</h2>
