--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -24,18 +24,20 @@
             </div>
         </ul>
 
-        <h2>Steps:</h2>
+        <h2 id="pizza-steps-header">Steps:</h2>
         <ol>
-            <li>Dissolve yeast and sugar in warm water that's 100 degrees F (44 degrees C) in a small bowl.
+            <div class="pizza-steps">
+                <li>Dissolve yeast and sugar in warm water that's 100 degrees F (44 degrees C) in a small bowl.
                 Let stand until yeast softens and begins to form a creamy foam, about 5 to 8 minutes.
-            </li>
-            <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough
+                </li>
+                <li>Combine 1 3/4 cups flour and salt in a large bowl. Pour in yeast mixture; mix well until dough
                 comes together.
-            </li>
-            <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes.
+                </li>
+                <li>Transfer dough to a floured surface and knead until smooth, about 2 minutes.
                 Add remaining 1/4 cup flour if dough is too sticky.
-            </li>
-            <li>Roll dogh into a 12-inch circle. Transfer to a greased pizza pan.</li>
+                </li>
+                <li>Roll dogh into a 12-inch circle. Transfer to a greased pizza pan.</li>
+            </div>
         </ol>
 
         <h2>Baking:</h2>
